[package]
name = "soves"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.7.3", features = [
    "full",
    # "eips",
    # "hyper",
    # "json-rpc",
    # "node-bindings",
    # "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    # "signer-aws",
    # "signer-keystore",
    # "signer-ledger",
    # "signer-mnemonic",
    # "signer-trezor",
    # "signer-yubihsm",
] }
axum = "0.7.9"
log = "0.4.22"
log4rs = "1.3.0"
serde = "1.0.215"
serde_derive = "1.0.215"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
vaultrs = "0.6.2"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.133"
uuid = "1.11.0"
